# Company-Financial-Analysis

./: README.md  api.py  app.py  pyproject.toml  report.md  requirements.txt
src/financial_analysis/: crew.py  main.py
src/financial_analysis/tools/: custom_tool.py
