[project]
name = "financial_analysis"
version = "0.1.0"
description = "Financial-Analysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
financial_analysis = "financial_analysis.main:run"
run_crew = "financial_analysis.main:run"
train = "financial_analysis.main:train"
replay = "financial_analysis.main:replay"
test = "financial_analysis.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
